--- a/2-javascript/homework-7/index.html
+++ b/2-javascript/homework-7/index.html
@@ -52,21 +52,54 @@
 		// то необходимо из функции возвращать null в общем массиве с результатами (комментарии).
 
 		// Решение
+		class CommentError extends Error {
+			constructor(message) {
+				super(message);
+				this.name = this.constructor.name;
+				// this.name = 'CommentError'
+			}
+		}
+
+		class CommonError extends Error {
+			constructor(message) {
+				super(message);
+				this.name = this.constructor.name;
+				// this.name = 'CommentError'
+			}
+		}
+
 		class Post {
+			comments = [];
+
 			constructor(userId, id, title, body) {
 				this.userId = userId;
 				this.id = id;
 				this.title = title;
 				this.body = body;
 			}
+
+
+			addComment(comment) {
+				if (comment instanceof Comment) {
+					this.comments.push(comment)
+				}
+			}
 		}
 
 		class Comment {
+			title = null
+
 			constructor(postId, id, name, email, body) {
 				this.postId = id;
 				this.name = name;
 				this.email = email;
 				this.body = body;
+			}
+
+			setTitle(title) {
+				if (title instanceof Object) {
+					this.title = title
+				}
 			}
 		}
 
@@ -80,20 +113,56 @@
 			});
 			return posts;
 		};
-		const getComment = async (postId) => {
-			const postCommentUrl = `https://jsonplaceholder.typicode.com/posts/${postId}/comments/`;
-			const res = await fetch(postCommentUrl);
-			return await res.json() || null;
-		};
-		const taskTwo = async () => {
-			let posts = await getPosts();
-			let comments = await Promise.all(posts.map(post => getComment(post.id)));
-			for (const postIndex in posts) {
-				posts[postIndex].comments = comments[postIndex];
+
+		async function getComments(postsId = []) {
+			const comments = []
+
+			const fetchComment = async postId => {
+				try {
+					const response = await fetch(`https://jsonplaceholder.typicode.com/posts/${postId}/comments/`);
+					if (!response.ok) {
+						throw new CommentError('Не удалось получить комментарии')
+					}
+
+					if (postId === 1) {
+						throw new CommonError('Тест')
+					}
+
+
+					const data = await response.json();
+					const postComments = data.map((comment) => new Comment(comment.postId, comment.id, comment.name, comment.email, comment.body))
+
+					comments.push(...postComments)
+				} catch (error) {
+					if (error instanceof CommentError) {
+						console.log(error)
+						comments.push(error)
+					} else {
+						console.log('Other error')
+						throw error
+					}
+				}
+
 			}
-			return posts;
+
+			const promises = postsId.map(fetchComment)
+			await Promise.all(promises)
+			return comments
 		}
-		taskTwo().then(posts => console.log(posts));
+
+		(async () => {
+			try {
+				const posts = await getPosts()
+				console.log(posts)
+
+				const postIds = posts.map(post => post.id)
+				const comments = await getComments(postIds)
+				console.log(comments)
+			} catch (error) {
+				console.error(error)
+			}
+
+		})()
 
 	</script>
 </head>
